//
// Stanford CoreNLP build specification for 
// Gradle.
//
plugins {
    id 'java'
    id 'eclipse'
    id 'application'
}

// Define repositories
repositories {
    mavenCentral()
}

// Gradle java plugin
sourceCompatibility = 21
targetCompatibility = 21
compileJava.options.encoding = 'UTF-8'

version = '4.5.8'

// Gradle application plugin
mainClassName = "edu.stanford.nlp.pipeline.StanfordCoreNLP"

// Jar creation
jar {
    manifest {
        attributes 'Implementation-Title': 'Stanford CoreNLP',
                   'Implementation-Version': version,
		   'Main-Class': 'edu.stanford.nlp.pipeline.StanfordCoreNLP'
    }
}

uploadArchives {
    repositories {
       flatDir {
           dirs 'repos'
       }
    }
}

// Add src-extra build target
sourceSets {
  main {
    java.srcDirs = ['src/']
    resources.srcDirs = ['src/']
  }
}

task listDeps {
    doLast {
        configurations.compile.each { File file -> println file.name }
    }
}

dependencies {
  implementation fileTree(dir: 'lib', include: '*.jar')
  testImplementation fileTree(dir: 'liblocal', include: '*.jar')
}

// Eclipse plugin setup
eclipse {
  classpath {
    defaultOutputDir = file('bin/')
    file {
      beforeMerged { classpath ->
        classpath.entries.removeAll { entry -> entry.kind == 'lib' }
      }
    }
  }
}

wrapper {
    gradleVersion = '8.6'
}
